# Flow-Back

./: .gitignore  Guide.txt  README.md  adjoint.py  bioemu.ipynb  blast.ipynb  chignolin_misc.ipynb  desres_comps.ipynb  environment.yml  ff.ipynb  file_config.py  get_val_energies.py  md_stats.ipynb  md_test.py  post_train.py  pre_train.py  pyproject.toml  run_energies.py  setup.sh  simple_adjoint_matching.ipynb  track_energies.ipynb  train.py  train_egnn_multi_time-batch.py  utils.py  utils_P035.py
configs/: config.yaml  eval.yaml  post_train.yaml  pre_train.yaml
forcefield/: aminoacids.rtp  bondtypes.csv  ffnonbonded.csv
forcefield/.ipynb_checkpoints/: merged-checkpoint.rtp
inputs/train_features/: idxs_train_pro.npy
models/DNAPro_pretrained/: bf-100.npy  bf-1000.npy  bf-150.npy  bf-200.npy  bf-250.npy  bf-300.npy  bf-350.npy  bf-400.npy  bf-450.npy  bf-50.npy  bf-500.npy  bf-550.npy  bf-600.npy  bf-650.npy  bf-700.npy  bf-750.npy  bf-800.npy  bf-850.npy  bf-900.npy  bf-950.npy  params.pkl  state-100.pth  state-1000.pth  state-150.pth  state-200.pth  state-250.pth  state-300.pth  state-350.pth  state-400.pth  state-450.pth  state-50.pth  state-500.pth  state-550.pth  (+8 more)
notebooks/: run_energies.ipynb
outputs/: get_clash.py
scripts/: chi_utils.py  egnn_utils.py  eval.py  eval_dna.py  eval_fix-chi.py  eval_utils.py  featurize_pro.py  runmany.out  runmany_DES.out  runmany_eval.sbatch
src/: adjoint.py  conditional_flow_matching.py  utils.py
tests/: conftest.py  test_chi.py  test_end_to_end.py  test_energy.py  test_model_utils.py  test_scripts_cli.py
(+45 files in other folders)
